# agent-one

./: .dockerignore  .gitignore  CLAUDE.md  Changelog.md  Claude_lv.md  DEV_README.md  Dockerfile  IDEA.md  MISTRAL_FUNCTION_CALLING_SIMULATION_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  WORLD.md  current_plan.md  hackathon_info.md  mistral_base.py  release-please-config.json  save_progress.diff
.claude/commands/: c.md  get_started.md  get_started_lv.md  i.md  p.md  s.md  t.md  t2i.md
.github/: PULL_REQUEST_TEMPLATE.md
.sisyphus/: boulder.json  ralph-loop.local.md
server/: .gitignore  env.sample  pyproject.toml  run  start_db
server/app/: agent.py  agents_api.py  base_agent.py  broadcast.py  config.py  db.py  events.py  finetuning.py  host.py  i18n.py  llm.py  llm_utils.py  main.py  models.py  narrator.py  presets.py  protocol.py  rag.py  rag_setup.py  sim_agent.py  station.py  storm.py  training.py  training_logger.py  training_models.py  views.py  voice.py  world.py
server/app/sim/: __init__.py  engine.py  errors.py  models.py  world_factory.py
server/data/: mars_knowledge.md
server/tests/: conftest.py  test_agent.py  test_agent_loop_hardening.py  test_agents_api.py  test_auto_confirm.py  test_base_agent.py  test_broadcast.py  test_config.py  test_confirm.py  test_control_buttons.py  test_coverage_expansion.py  test_elapsed_time.py  test_engine_bugfixes.py  test_events.py  test_finetuning.py  test_goal_confidence.py  test_hauler.py  test_health.py  test_host.py  test_huggingface.py  test_i18n.py  test_llm.py  test_models.py  test_narrator.py  test_peer_messaging.py  test_power_budget.py  test_presets.py  test_production.py  test_protocol.py  test_rag.py  test_replay_api.py  test_resources.py  test_robustness.py  test_sim_agent.py  test_sim_engine.py  test_sim_generation.py  test_sim_observability.py  test_spa_security.py  test_station.py  test_training.py  (+5 more)
tasks/: abandoned-structures-plan.md  basalt-vein-system.md  ci-fix-plan.md  discord-git-integration.md  dual-narrators.md  elevenlabs-narration.md  huggingface-integration-plan.md  ice-water-gas-hauler-plan.md  landing-visuals-plan.md  release-versioning-management.md  rover-turn-cadence-fix.md  simplify-rover-actions.md  todo-ice-mountains-geysers.md  todo.md  training-data-logging-plan.md  voice-command.md  voxtral-voice-commander-plan.md
ui/: eslint.config.js  index.html  package-lock.json  package.json  uno.config.js  vite.config.js
(+242 files in other folders)
