[project]
name = "mars"
version = "0.1.0"
description = "Multi-Agent Mars Mission Simulation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "surrealdb>=1.0.7",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "mistralai>=1.0.0",
    "elevenlabs>=1.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.rut]
coverage_source = ["app", "tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "rut",
    "import-deps>=0.5.1",
]

[tool.uv.sources]
rut = { git = "https://github.com/schettino72/rut", branch = "main" }
import-deps = { git = "https://github.com/schettino72/import-deps", branch = "master" }

[[tool.uv.dependency-metadata]]
name = "rut"
version = "0.4.0.dev0"
requires-dist = ["coverage", "import-deps>=0.5.1", "rich>=14.0.0"]
