[project]
name = "mars"
version = "0.8.0"
description = "Multi-Agent Mars Mission Simulation"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "surrealdb>=1.0.7",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "rich>=13.0.0",
    "mistralai>=1.0.0",
    "elevenlabs>=1.0.0",
    "huggingface-hub>=0.25.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "import-deps>=0.5.1",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
